syntax = "proto3";

option csharp_namespace = "TourMate.AuthService.Api.Protos";

service NotificationService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailReply);
}

message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message SendEmailReply {
  bool success = 1;
}
